--- a/lecture/l0/Intro_CML.html
+++ b/lecture/l0/Intro_CML.html
@@ -371,6 +371,7 @@
 <li>Learn econometric models for high-dimensional data</li>
 <li>Learn recent Causal ML methods for estimation of (average) treatment effects</li>
 <li>Get to know recent software (e.g.&nbsp;DoubleML package in R) to apply Causal ML algorithm in practice</li>
+<li>Guest lecture with one of the developers of the DoubleML package</li>
 </ul>
 
 <img data-src="logo.png" style="width:100.0%" class="r-stretch quarto-figure-center"></section>
