Update installation instructions for R in VS Code to include Jupyter extensions

--- a/lecture/l0/R in VS Code/R in VS Code.html
+++ b/lecture/l0/R in VS Code/R in VS Code.html
@@ -368,8 +368,8 @@
 <img src="figures/anaconda.png" height="350px">
 </center>
 <ol start="5" type="1">
-<li><p><strong>Install the R Extension</strong> in VS Code.</p></li>
-<li><p><strong>Open R notebook</strong> in VS Code and select R kernel in the top right corner.</p></li>
+<li><p><strong>Install the R and Jupyter extensions</strong> in VS Code.</p></li>
+<li><p><strong>Open R notebook</strong> (<code>.ipynb</code>) in VS Code and select R kernel in the top right corner.</p></li>
 </ol>
 <div class="footer footer-default">
 <p>Causal ML</p>
