Clarify installation instructions for Anaconda and emphasize selecting R kernel in VS Code

--- a/lecture/l0/R in VS Code/R in VS Code.html
+++ b/lecture/l0/R in VS Code/R in VS Code.html
@@ -344,7 +344,7 @@
 <li>Download and install the latest version of R on your laptop <a href="https://cran.r-project.org/">here</a>.</li>
 <li>In R, install the <code>languageserver</code> package by running <code>install.packages("languageserver")</code></li>
 </ul></li>
-<li><strong>Install Anaconda</strong>
+<li><strong>Install Anaconda</strong> (optional)
 <ul>
 <li>Download and install the latest version of Anaconda on your laptop, see
 <ul>
@@ -354,7 +354,7 @@
 </ul></li>
 <li><strong>Install VS Code</strong>
 <ul>
-<li><a href="https://code.visualstudio.com/download">Download VS Code here</a>.</li>
+<li>Download VS Code <a href="https://code.visualstudio.com/download">here</a>.</li>
 </ul></li>
 </ol></li>
 </ul>
@@ -369,7 +369,7 @@
 </center>
 <ol start="5" type="1">
 <li><p><strong>Install the R and Jupyter extensions</strong> in VS Code.</p></li>
-<li><p><strong>Open R notebook</strong> (<code>.ipynb</code>) in VS Code and select R kernel in the top right corner.</p></li>
+<li><p><strong>Open R notebook</strong> (<code>.ipynb</code>) in VS Code and select <strong>R kernel</strong> in the top right corner.</p></li>
 </ol>
 <div class="footer footer-default">
 <p>Causal ML</p>
